<resources>
    <string name="app_name">Navigation Drawer</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="content">Content</string>
    <string name="archive">Archive</string>
    <string name="recent">Recent</string>
    <string name="favourites">Favourites</string>
    <string name="bin">Bin</string>

    <string name="home_fragment">Home fragment</string>
    <string name="settings_fragment">Setting fragment</string>
    <string name="content_fragment">Content fragment</string>
    <string name="archive_fragment">Archive fragment</string>
    <string name="recent_fragment">Recent fragment</string>
    <string name="favourites_fragment">Favourites fragment</string>
    <string name="bin_fragment">Bin fragment</string>

    <string name="link_to_content_button">Link to Content Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>